--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="zone">
       <ul class="main-nav">
-          <li class="navlist"><a href=""></a><img class="phone" src="ph.png">  <a href="tel:9946205711"> 9946205711</a></li>
+          <li class="navlist"><a href=""></a><img class="phone" src="pho.png"> <a href="tel:7034911822"> Call-Us</a></li>
           <li class="push navlist"><a href="">Admin</a></li>
   </ul>
   </nav>
@@ -29,6 +29,6 @@
 <a  href="admission.html" class="button1">Apply</a></div></div>
 </div>
 </body>
-<div>  <footer class="zone foot "><p1>2020 Darul Aman Software Department</p1></footer>
+<div>  <footer class="zone foot "><p1>2020 Ihyaulaman software department</p1></footer>
 </div>
 </html>
